--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,7 +1,9 @@
-- name: Hello World Sample
-  hosts: all
-  tasks:
-    - name: Hello Message
-      debug:
-        msg: "Hello World 2023!"
+# Test connectivity to a windows host
+# ansible winserver -m ansible.windows.win_ping
 
+- name: Example from an Ansible Playbook
+  ansible.windows.win_ping:
+
+- name: Induce an exception to see what happens
+  ansible.windows.win_ping:
+    data: crash
