--- a/hello_world.yml
+++ b/hello_world.yml
@@ -7,8 +7,8 @@
   tasks:
   
     - name: Example from an Ansible Playbook
-      ansible.windows.win_ping:
+      win_ping:
 
     - name: Induce an exception to see what happens
-      ansible.windows.win_ping:
+      win_ping:
         data: crash
