--- a/hello_world.yml
+++ b/hello_world.yml
@@ -5,9 +5,23 @@
   hosts: all
  
   tasks:
-  
-    - name: Copy a single file, but keep a backup
-      ansible.windows.win_copy:
-        src: /srv/myfiles/foo.conf
-        dest: C:\Temp\renamed-foo.conf
-        backup: yes
+    
+    - name: Touch a file (creates if not present, updates modification time if present)
+      ansible.windows.win_file:
+        path: C:\Temp\foo.conf
+        state: touch
+    
+    - name: Remove a file, if present
+      ansible.windows.win_file:
+        path: C:\Temp\foo.conf
+        state: absent
+    
+    - name: Create directory structure
+      ansible.windows.win_file:
+        path: C:\Temp\folder\subfolder
+        state: directory
+    
+    - name: Remove directory structure
+      ansible.windows.win_file:
+        path: C:\Temp
+        state: absent
