--- a/windows_copy.yml
+++ b/windows_copy.yml
@@ -6,7 +6,7 @@
   
     - name: Obtener informacion de carpeta
       ansible.windows.win_stat:
-        path: E:\eCommerce\eCommerce_WEBSite
+        path: "{{ FOLDER }}"
       register: folder_info
 
     - name: Imprimir resultado
