--- a/find_windowsfolder.yml
+++ b/find_windowsfolder.yml
@@ -8,3 +8,15 @@
       ansible.windows.win_find:
         paths: "{{ FOLDER }}"
         file_type: directory
+      register: apps_found
+
+    - name: Get the content of found files from host
+      slurp:
+        src: "{{ item }}"
+      loop: "{{ apps_found | json_query('files[].path') }}"
+      register: slurped_files
+
+    - name: Display result
+      debug:
+        msg: "Found application {{ item.item | win_dirname | win_basename }} with contents: {{ item.content | b64decode }}"
+      loop: "{{ slurped_files.results }}"
