--- a/find_windowsfolder.yml
+++ b/find_windowsfolder.yml
@@ -7,7 +7,7 @@
     - name: Find hidden files in path
       ansible.windows.win_find:
         paths: "{{ FOLDER }}"
-        file_type: directory
+      register: apps_found
 
     - name: Get the content of found files from host
       slurp:
