--- a/list_s3.yml
+++ b/list_s3.yml
@@ -9,6 +9,9 @@
         bucket: "{{ AWS_BUCKET }}"
         region: "{{ REGION }}"
         mode: list
+      vars:
+        AWS_ACCESS_KEY_ID: "{{ AWS_ACCESS_KEY_ID }}"
+        AWS_SECRET_ACCESS_KEY: "{{ AWS_SECRET_ACCESS_KEY }}"
       register: listresult
     
     - debug: msg={{listresult.s3_keys}}
