--- a/copy_windowsremotefolder_aws.yml
+++ b/copy_windowsremotefolder_aws.yml
@@ -12,3 +12,4 @@
         aws_access_key: "{{ AWS_ACCESS_KEY_ID }}"
         aws_secret_key: "{{ AWS_SECRET_ACCESS_KEY }}"
         region: us-east-1
+        mode: put
