--- a/check_host_winssh.yml
+++ b/check_host_winssh.yml
@@ -11,3 +11,6 @@
     - name: display result_get_host
       debug:
        var: result_get_host
+
+    - name: "Download file from S3"
+      ansible.windows.win_shell: "aws s3 sync s3://my-fancy-bucket/my-folder/ C:\\Users\\cl170277171\\Desktop\\ansible_tmp\\
