--- a/check_host_winssh.yml
+++ b/check_host_winssh.yml
@@ -13,4 +13,4 @@
        var: result_get_host
 
     - name: "Download file from S3"
-      win_shell: "aws s3 sync s3://chilecompra-ansible-test/ C:\\Users\\cl170277171\\Desktop\\ansible_tmp"
+      win_shell: "aws s3 sync s3://chilecompra-ansible-test/ E:\\eCommerce\\eCommerce_WEBSite\\20210906_CMII"
