--- a/upload_files_to aws_s3.yml
+++ b/upload_files_to aws_s3.yml
@@ -1,1 +1,8 @@
+---
+- name: upload files to AWS S3
+  hosts: all
 
+  tasks:
+  
+    - name: upload files to S3"
+      win_shell: "aws s3 sync {{FOLDER_SOURCE}} {{FOLDER_TARGET}}"
